feat(logout) fix(refactoring): add logout feature and fixing crashed server

--- a/api/.env.local
+++ b/api/.env.local
@@ -1,2 +1,13 @@
+# For PostgreSQL
 DATABASE_URL=
+
+# For Redis
+REDIS_ADDR=
+REDIS_PASSWORD=
+REDIS_DB=
+
+# For JWT
 JWT_SECRET=
+
+# Port App
+PORT=
